[package]
name = "contract-rs"
description = "Hello Utility Example"
version = "0.1.0"
edition = "2021"
# TODO: Fill out the repository field to help utnet ecosystem tools to discover your project.
# NEP-0330 is automatically implemented for all contracts built with https://github.com/xxx/cargo-xxx.
# Link to the repository will be available via `contract_source_metadata` view-function.
#repository = "https://github.com/xxx/xxx"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
unc-sdk = { version = "2.3.0", features = ["legacy"] }

[dev-dependencies]
unc-sdk = { version = "2.3.0", features = ["unit-testing"] }
utility-workspaces = { version = "0.12.4", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
